--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -1,27 +1,45 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RzW-Uh-ojm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RzW-Uh-ojm">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Game Of Thrones-->
         <scene sceneID="sjx-cT-F0W">
             <objects>
-                <tableViewController id="W4q-qE-EWG" customClass="GameOfThronesTableViewController" customModule="AC3_2_GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="W4q-qE-EWG" customClass="GameOfThronesTableViewController" customModule="AC3_2_GameOfThrones" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="oAx-B9-1iZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Gzx-2j-BOY">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EpDetailCell" textLabel="8DF-w0-vCf" detailTextLabel="voN-6s-dIH" style="IBUITableViewCellStyleSubtitle" id="Gzx-2j-BOY" customClass="GOTEpDetailTableViewCell" customModule="AC3_2_GameOfThrones" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gzx-2j-BOY" id="jys-lM-aJJ">
                                     <frame key="frameInset" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8DF-w0-vCf">
+                                            <frame key="frameInset" minX="15" minY="4" width="34" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="voN-6s-dIH">
+                                            <frame key="frameInset" minX="15" minY="25" width="43" height="15"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -29,19 +47,122 @@
                             <outlet property="delegate" destination="W4q-qE-EWG" id="T33-lT-J3o"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="d3M-LG-Oge"/>
+                    <navigationItem key="navigationItem" title="Game Of Thrones" id="d3M-LG-Oge">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="DUY-RD-smF"/>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="znW-zF-n3a" kind="show" identifier="GOTEpDetailSegue" id="Emg-WN-Azf"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Orb-fK-tUO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1012" y="160"/>
         </scene>
+        <!--GOTEpDetailViewController-->
+        <scene sceneID="WHp-6n-tsp">
+            <objects>
+                <viewController title="GOTEpDetailViewController" id="znW-zF-n3a" customClass="GOTEpDetailViewController" customModule="AC3_2_GameOfThrones" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xdh-9x-Bn9"/>
+                        <viewControllerLayoutGuide type="bottom" id="bvW-u9-vg8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DZn-Qg-1Zb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PvC-2t-2K2" userLabel="DetailScreenView">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JM5-jY-lq2">
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="JM5-jY-lq2" secondAttribute="height" multiplier="1:0.5623" id="eHt-E0-Uaz"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titile: Winter Is Coming" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQO-Ky-X5j">
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Season: 1, episode: 1. " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmG-ki-MD9">
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First aired: 2011-11-23, runtime: 60 minutes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NbX-dk-cok">
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2A5-Sa-wuL">
+                                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="6Sq-zf-VX2"/>
+                                            <constraint firstAttribute="width" constant="68" id="Vo4-Mb-oyc"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="TVMaze"/>
+                                        <connections>
+                                            <action selector="linkButtonTapped:" destination="znW-zF-n3a" eventType="touchUpInside" id="Ilq-ZJ-rfJ"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwg-XB-eZR">
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="uwg-XB-eZR" firstAttribute="top" secondItem="NbX-dk-cok" secondAttribute="bottom" constant="8" symbolic="YES" id="AQm-HF-J9t"/>
+                                    <constraint firstAttribute="bottom" secondItem="2A5-Sa-wuL" secondAttribute="bottom" constant="20" id="DMj-eG-MAe"/>
+                                    <constraint firstItem="IQO-Ky-X5j" firstAttribute="leading" secondItem="PvC-2t-2K2" secondAttribute="leading" constant="20" id="EED-mH-pdV"/>
+                                    <constraint firstItem="NbX-dk-cok" firstAttribute="centerX" secondItem="uwg-XB-eZR" secondAttribute="centerX" id="LoC-JF-HRR"/>
+                                    <constraint firstItem="IQO-Ky-X5j" firstAttribute="top" secondItem="JM5-jY-lq2" secondAttribute="bottom" constant="8" symbolic="YES" id="P5x-yp-O87"/>
+                                    <constraint firstItem="mmG-ki-MD9" firstAttribute="trailing" secondItem="NbX-dk-cok" secondAttribute="trailing" id="QnS-tX-jUz"/>
+                                    <constraint firstItem="mmG-ki-MD9" firstAttribute="leading" secondItem="NbX-dk-cok" secondAttribute="leading" id="WEZ-xU-fYT"/>
+                                    <constraint firstItem="JM5-jY-lq2" firstAttribute="leading" secondItem="PvC-2t-2K2" secondAttribute="leading" id="cHF-Vq-ove"/>
+                                    <constraint firstItem="mmG-ki-MD9" firstAttribute="top" secondItem="IQO-Ky-X5j" secondAttribute="bottom" constant="8" symbolic="YES" id="iIg-NU-UcL"/>
+                                    <constraint firstItem="JM5-jY-lq2" firstAttribute="centerX" secondItem="IQO-Ky-X5j" secondAttribute="centerX" id="iiy-Yx-wkL"/>
+                                    <constraint firstItem="IQO-Ky-X5j" firstAttribute="trailing" secondItem="mmG-ki-MD9" secondAttribute="trailing" id="jZs-Sn-uDf"/>
+                                    <constraint firstItem="NbX-dk-cok" firstAttribute="top" secondItem="mmG-ki-MD9" secondAttribute="bottom" constant="8" symbolic="YES" id="kP5-2M-1DX"/>
+                                    <constraint firstItem="IQO-Ky-X5j" firstAttribute="leading" secondItem="mmG-ki-MD9" secondAttribute="leading" id="mX4-SQ-N3i"/>
+                                    <constraint firstAttribute="trailing" secondItem="JM5-jY-lq2" secondAttribute="trailing" id="sC8-Z3-ZYp"/>
+                                    <constraint firstItem="uwg-XB-eZR" firstAttribute="centerX" secondItem="2A5-Sa-wuL" secondAttribute="centerX" id="wO8-CE-ie4"/>
+                                    <constraint firstItem="uwg-XB-eZR" firstAttribute="leading" secondItem="PvC-2t-2K2" secondAttribute="leading" constant="36" id="wZf-4T-N6B"/>
+                                    <constraint firstItem="JM5-jY-lq2" firstAttribute="top" secondItem="PvC-2t-2K2" secondAttribute="top" id="zn5-aQ-dLb"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="PvC-2t-2K2" firstAttribute="leading" secondItem="DZn-Qg-1Zb" secondAttribute="leading" id="I2f-Wg-zhM"/>
+                            <constraint firstItem="bvW-u9-vg8" firstAttribute="top" secondItem="PvC-2t-2K2" secondAttribute="bottom" id="Vqu-uP-HDz"/>
+                            <constraint firstItem="PvC-2t-2K2" firstAttribute="top" secondItem="xdh-9x-Bn9" secondAttribute="bottom" id="Xs4-IN-7uG"/>
+                            <constraint firstAttribute="trailing" secondItem="PvC-2t-2K2" secondAttribute="trailing" id="dKh-4V-9xA"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="airdateRuntimeLabel" destination="NbX-dk-cok" id="pug-fT-bX1"/>
+                        <outlet property="imageView" destination="JM5-jY-lq2" id="TEc-h8-LSn"/>
+                        <outlet property="seasonEpLabel" destination="mmG-ki-MD9" id="t1T-sD-wpz"/>
+                        <outlet property="summaryLabel" destination="uwg-XB-eZR" id="Bro-s2-sGI"/>
+                        <outlet property="titleLabel" destination="IQO-Ky-X5j" id="drJ-q3-jD8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ufR-VS-WUv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1895.2" y="157.87106446776613"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="KzA-EL-rAA">
             <objects>
                 <navigationController id="RzW-Uh-ojm" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="r16-3m-ZvW">
+                    <navigationBar key="navigationBar" contentMode="scaleAspectFit" id="r16-3m-ZvW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="W4q-qE-EWG" kind="relationship" relationship="rootViewController" id="7rC-gg-K9T"/>
@@ -52,4 +173,7 @@
             <point key="canvasLocation" x="60" y="160"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="TVMaze" width="253" height="80"/>
+    </resources>
 </document>
